# backstage

./: .editorconfig  .envrc  .gitignore  .markdownlint-cli2.yaml  .pre-commit-config.yaml  .prettierignore  .trivyignore  .yamllint  README.md  atlantis.yaml  catalog-info.yaml  container-image-tests.yaml  mise.toml  mkdocs.yaml  mkdocs.yml  package-lock.json  package.json
.cloudbuild/: build.yaml  cloudbuild.yaml  gke-deploy.yaml  pull-request.yaml
.github/: CODEOWNERS  dependabot.yaml  dependabot.yml  pull_request_template.md
backstage/: .dockerignore  .envrc  .gitignore  .prettierignore  .yarnrc.yml  Procfile  app-config.local.example.yaml  app-config.production.yaml  app-config.yaml  catalog-info.yaml  container-image-tests.yaml  default-lists.yaml  mise.toml  op.bash  package.json  project.toml  run.Dockerfile  soundcheck-tracks.yaml  tsconfig.json  werf.yaml
backstage/templates/scaffolder/python-package/content/: .containerignore  .gitignore  Containerfile  Makefile  catalog-info.yaml  mkdocs.yml  pyproject.toml
backstage/templates/scaffolder/python-package/content/${{ values.name | replace("-", "_") }}/: __init__.py
backstage/templates/scaffolder/python-package/content/.github/: CODEOWNERS  commit_message_format_reminder.md  dependabot.yml
backstage/templates/scaffolder/python-package/content/.github/workflows/: checks.yaml
backstage/templates/scaffolder/python-package/content/docs/: README.md
backstage/templates/scaffolder/python-package/content/tests/: test_fail.py
docs/: README.md  catalog.md  index.md  kube.mmd  kubernetes.md  mcp.md  plugins.md  (+5 more)
(+273 files in other folders)
