[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "${{ values.name }}"
version = "1.0.0"
description = "${{ values.description }}"
authors = [{name = "${{ values.author }}"}]
requires-python = ">=3.11"
dynamic = ["dependencies"]

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.9"
pyright = "^1.1.388"
pytest = "^8.3.3"

[tool.ruff.lint]
select = ["ALL"]
# https://docs.astral.sh/ruff/rules
ignore = [
    # Ignore pycodestyle that is redundant -- and can conflict -- with the
    # formatter.
    "E",
    # Ignore flake8-logging-format because it's extremely ugly for dubious
    # performance gains.
    "G",
    # Ignore two pydocstyle rules that cause internal conflicts and raise warnings.
    "D203",
    "D212",
    # Ignore flake8-copyright because it's not necessary on closed-source software.
    "CPY",
    # Ignore two rules that ruff warns can cause conflicts with the formatter.
    "COM812",
    "ISC001",
]

[tool.ruff.lint.extend-per-file-ignores]
"tests/*" = [
    # Don't require an __init__.py for tests.
    "INP",
    # Allow assert statements for pytest.
    "S101"
]

[tool.ruff.lint.flake8-pytest-style]
# Arbitrary choice for consistency.
fixture-parentheses = true
